--- a/market-ajh/config/packages/security.yaml
+++ b/market-ajh/config/packages/security.yaml
@@ -36,11 +36,24 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+    # Role hierarchy
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_VENDEUR]
+        ROLE_VENDEUR: [ROLE_CLIENT]
+        ROLE_CLIENT: []
+        ROLE_COMPTABLE: []
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # Admin role
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        # Vendeur role
+        - { path: ^/vendeur, roles: ROLE_VENDEUR }
+        # Client role
+        - { path: ^/client, roles: ROLE_CLIENT }
+        # Comptable role (separate from others)
+        - { path: ^/comptable, roles: ROLE_COMPTABLE }
 
 when@test:
     security:
