--- a/market-ajh/composer.json
+++ b/market-ajh/composer.json
@@ -79,6 +79,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.1",
         "symfony/maker-bundle": "^1.63"
     }
 }
