--- a/market-ajh/config/packages/security.yaml
+++ b/market-ajh/config/packages/security.yaml
@@ -50,6 +50,7 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/user, roles: ROLE_ADMIN }
         - { path: ^/item, roles: ROLE_ADMIN }
+        - { path: '^/guild', roles: ROLE_ADMIN }
         # Vendeur role
         - { path: ^/vendeur, roles: ROLE_VENDEUR }
         # Client role
