refonte de l'interface de sélection de la guilde du shop, ajout du logo de chaque guilde dans les fixtures et dans la bases de données. Les admins peuvent uploadd umage image avant de créer une guilde

--- a/market-ajh/config/packages/security.yaml
+++ b/market-ajh/config/packages/security.yaml
@@ -51,6 +51,7 @@ security:
         - { path: ^/user, roles: ROLE_ADMIN }
         - { path: ^/item, roles: ROLE_ADMIN }
         - { path: '^/guild', roles: ROLE_ADMIN }
+        - { path: '^/shop', roles: ROLE_CLIENT }
         # Vendeur role
         - { path: ^/vendeur, roles: ROLE_VENDEUR }
         # Client role
