--- a/market-ajh/.env
+++ b/market-ajh/.env
@@ -29,3 +29,4 @@ DATABASE_URL="mysql://myuser:mypassword@127.0.0.1:3306/mydatabase?serverVersion=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
 ###< doctrine/doctrine-bundle ###
+SHELL_VERBOSITY=3
