--- a/market-ajh/config/packages/monolog.yaml
+++ b/market-ajh/config/packages/monolog.yaml
@@ -1,6 +1,7 @@
 monolog:
     handlers:
-        # this "file_log" key could be anything
+        channels: ["commandes", utilisateurs]
+
         file_log:
             type: stream
             # log to var/log/(environment).log
