--- a/market-ajh/config/packages/security.yaml
+++ b/market-ajh/config/packages/security.yaml
@@ -38,26 +38,22 @@ security:
 
     # Role hierarchy
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_VENDEUR]
+        ROLE_ADMIN: [ROLE_COMPTABLE, ROLE_VENDEUR, ROLE_CLIENT]
+        ROLE_COMPTABLE: [ROLE_VENDEUR, ROLE_CLIENT]
         ROLE_VENDEUR: [ROLE_CLIENT]
         ROLE_CLIENT: []
-        ROLE_COMPTABLE: []
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # Admin role
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/orders, roles: ROLE_VENDEUR }
         - { path: ^/user, roles: ROLE_ADMIN }
         - { path: ^/item, roles: ROLE_ADMIN }
         - { path: '^/guild', roles: ROLE_ADMIN }
         - { path: '^/shop', roles: ROLE_CLIENT }
-        # Vendeur role
-        - { path: ^/vendeur, roles: ROLE_VENDEUR }
-        # Client role
-        - { path: ^/client, roles: ROLE_CLIENT }
-        # Comptable role (separate from others)
-        - { path: ^/comptable, roles: ROLE_COMPTABLE }
+        - { path: ^/compta, roles: ROLE_COMPTABLE }
 
 when@test:
     security:
