/news n'est accessibles que pour les admin et les compatbles, les retourns à la ligne sont correctement pris en copte sur /home

--- a/market-ajh/config/packages/security.yaml
+++ b/market-ajh/config/packages/security.yaml
@@ -54,6 +54,7 @@ security:
         - { path: '^/guild', roles: ROLE_ADMIN }
         - { path: '^/shop', roles: ROLE_CLIENT }
         - { path: ^/compta, roles: ROLE_COMPTABLE }
+        - { path: ^/news, roles: ROLE_COMPTABLE }
 
 when@test:
     security:
