--- a/market-ajh/config/packages/doctrine_migrations.yaml
+++ b/market-ajh/config/packages/doctrine_migrations.yaml
@@ -4,3 +4,5 @@ doctrine_migrations:
         # as migrations classes should NOT be autoloaded
         'DoctrineMigrations': '%kernel.project_dir%/migrations'
     enable_profiler: false
+    all_or_nothing: true
+    check_database_platform: true
