--- a/market-ajh/composer.json
+++ b/market-ajh/composer.json
@@ -25,6 +25,7 @@
         "symfony/security-bundle": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/validator": "7.2.*",
+        "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.2.*",
         "symfonycasts/tailwind-bundle": "^0.10.0",
         "twig/extra-bundle": "^2.12|^3.0",
