--- a/market-ajh/config/packages/framework.yaml
+++ b/market-ajh/config/packages/framework.yaml
@@ -13,3 +13,10 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+when@prod:
+    framework:
+        asset_mapper:
+            enabled: false
+        assets:
+            json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
