--- a/market-ajh/.env
+++ b/market-ajh/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=efc7c3fd6d3c23225ea3d3d2f801300f
 DATABASE_URL="mysql://myuser:mypassword@127.0.0.1:3306/mydatabase?serverVersion=8.0"
 ###< symfony/framework-bundle ###
