passage de tailwing-bundle à tailwind via webpack-encore. Ajout d'une page de maintenance(MAINTENANCE_MODE=0/1)

--- a/market-ajh/config/packages/monolog.yaml
+++ b/market-ajh/config/packages/monolog.yaml
@@ -12,3 +12,15 @@ monolog:
             path: "%kernel.logs_dir%/user.log"
             level: info
             channels: ["utilisateurs"]
+
+        main:
+            type: fingers_crossed
+            action_level: error      # déclenche dès error
+            handler: nested
+            buffer_size: 200         # conserve le contexte d'avant l'erreur
+        nested:
+            type: rotating_file
+            path: "%kernel.project_dir%/var/log/prod.log"
+            max_files: 10
+            level: debug             # logs détaillés en prod.log
+            formatter: monolog.formatter.line
