--- a/market-ajh/public/.htaccess
+++ b/market-ajh/public/.htaccess
@@ -24,6 +24,12 @@ DirectoryIndex index.php
 
     RewriteEngine On
 
+    # --- Force HTTPS (also works behind proxies that set X-Forwarded-Proto) ---
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=308,L]
+    # --------------------------------------------------------------------------
+
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
