--- a/market-ajh/.env
+++ b/market-ajh/.env
@@ -30,3 +30,6 @@ DATABASE_URL="mysql://myuser:mypassword@127.0.0.1:3306/mydatabase?serverVersion=
 
 ###< doctrine/doctrine-bundle ###
 SHELL_VERBOSITY=3
+###> symfony/mailer ###
+
+###< symfony/mailer ###
