--- a/market-ajh/package.json
+++ b/market-ajh/package.json
@@ -6,6 +6,7 @@
         "@tailwindcss/postcss": "^4.1.12",
         "autoprefixer": "^10.4.21",
         "core-js": "^3.38.0",
+        "file-loader": "^6.2.0",
         "postcss": "^8.5.6",
         "postcss-loader": "^8.1.1",
         "regenerator-runtime": "^0.13.9",
