mise à jour vers symfony 7.3 (composer update)

--- a/market-ajh/composer.json
+++ b/market-ajh/composer.json
@@ -8,31 +8,31 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-pdo": "*",
-        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-bundle": ">=2.15.1",
         "doctrine/doctrine-fixtures-bundle": "^4.1",
-        "doctrine/doctrine-migrations-bundle": "^3.4",
-        "doctrine/orm": "^3.3",
-        "symfony/apache-pack": "*",
-        "symfony/asset": "7.2.*",
-        "symfony/console": "7.2.*",
-        "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2",
-        "symfony/form": "7.2.*",
-        "symfony/framework-bundle": "7.2.*",
-        "symfony/mailer": "7.2.*",
-        "symfony/mime": "7.2.*",
+        "doctrine/doctrine-migrations-bundle": "^3.4.2",
+        "doctrine/orm": "^3.5.2",
+        "symfony/apache-pack": ">=1.0.1",
+        "symfony/asset": "7.3.*",
+        "symfony/console": "7.3.*",
+        "symfony/dotenv": "7.3.*",
+        "symfony/flex": "^2.8.2",
+        "symfony/form": "7.3.*",
+        "symfony/framework-bundle": "7.3.*",
+        "symfony/mailer": "7.3.*",
+        "symfony/mime": "7.3.*",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/runtime": "7.2.*",
-        "symfony/security-bundle": "7.2.*",
-        "symfony/stimulus-bundle": "*",
-        "symfony/twig-bundle": "7.2.*",
-        "symfony/ux-turbo": "*",
-        "symfony/validator": "7.2.*",
-        "symfony/webpack-encore-bundle": "*",
-        "symfony/yaml": "7.2.*",
-        "symfonycasts/tailwind-bundle": "^0.10.0",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "symfony/runtime": "7.3.*",
+        "symfony/security-bundle": "7.3.*",
+        "symfony/stimulus-bundle": ">=2.30",
+        "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-turbo": ">=2.30",
+        "symfony/validator": "7.3.*",
+        "symfony/webpack-encore-bundle": ">=2.3",
+        "symfony/yaml": "7.3.*",
+        "symfonycasts/tailwind-bundle": "^0.10.1",
+        "twig/extra-bundle": "^2.12|^3.21",
+        "twig/twig": "^2.12|^3.21.1"
     },
     "config": {
         "allow-plugins": {
@@ -81,7 +81,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.2.*",
+            "require": "7.3.*",
             "docker": false
         }
     },
